2019-1/231/users/4210/executions/1810_2566.log
== TEST (2019-06-10 23:49:08) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[i] = 100*(per[i]/sum(per))
	per[i] = round(per[i],1)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 23:49:42) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*(per[x]/sum(per))
	per[x] = round(per[x],1)
	
print(per)

-- EXECUTION TIME:
1.02646
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18  0  0  9 10 13]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas: [ 4  7 12 12 10 15]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas: [15  3 10  2  5 10]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:49:46) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*(per[x]/sum(per))
	per[x] = round(per[x],1)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:51:46) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*per[x]/sum(per)
	per[x] = round(per[x],1)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:53:10) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*per[x]/sum(per)
	per[x] = round(per[x],1)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:53:27) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*per[x]/sum(per)
	per[x] = round(per[x],1)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:54:13) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = per[x]/sum(per)
	per[x] = round(per[x],1)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:55:02) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*per[x]/sum(per)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:55:16) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = per[x]/sum(per)
	
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:56:43) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
print(per)
for x in range(size(per)):
	per[x] = per[x]/sum(per)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:57:10) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
print(sum(per))
for x in range(size(per)):
	per[x] = per[x]/sum(per)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:57:50) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
print(per)
for x in range(size(per)):
	per[x] = per[x]/sum(per)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:58:15) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
print(sum(per)):
for x in range(size(per)):
	per[x] = per[x]/sum(per)


-- ERROR:
File "XXXX", line 19
    print(sum(per)):
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:58:19) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
print(sum(per))
for x in range(size(per)):
	per[x] = per[x]/sum(per)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 23:58:58) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = per[x]/sum(per)
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:00:57) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = per[x]/sum(per)
	print(per[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:02:22) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = 100*per[x]/sum(per)
print(per)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:03:25) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	print(per[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:03:35) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	print(per[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:04:51) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = per[x]/sum(per)
	print(per[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 00:05:07) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=int)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for x in range(size(per)):
	per[x] = per[x]/sum(per)
	print(per[x])

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:08:01) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:09:05) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
per[i] = 100*per[i]/sum(per)
print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:10:03) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1
	
for j in range(size(faltas)):
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:12:25) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for j in faltas:
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:12:37) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[5] = per[5]+1

for j in faltas:
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:13:35) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in faltas:
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:15:21) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(size(faltas)):
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:15:41) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(size(faltas)):
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:16:43) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(size(per)):
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:16:49) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:17:09) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = 100*per[j]/sum(per)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:17:57) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = round(100*per[j]/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:21:38) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = round(per[j]/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 02:23:44) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = round(100*per[j]/sum(per),1)

print(per)
-- EXECUTION TIME:
1.14695
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
faltas: [18.8  0.   0.   9.4 10.5 13.4]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
faltas: [ 4.   7.1 12.1 12.1 10.4 14.9]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
faltas: [15.4  3.8 10.3  2.7  5.2  9.7]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:23:48) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = round(100*per[j]/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:23:57) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = round(100*per[j]/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:24:15) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per = round(100*per[j]/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:24:31) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per = round(100*per/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:28:23) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1

for j in range(6):
	per[j] = round(100*per[j]/sum(per),1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-11 02:29:32) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1
l = sum(per)
for j in range(6):
	per[j] = round(100*per[j]/l,1)

print(per)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-11 02:29:42) 
-- CODE:
from numpy import*
faltas = array(eval(input("faltas: ")))

per = zeros(6,dtype=float)

for i in faltas:
	if(i==2):
		per[0] = per[0]+1
	elif(i==3):
		per[1] = per[1]+1
	elif(i==4):
		per[2] = per[2]+1
	elif(i==5):
		per[3] = per[3]+1
	elif(i==6):
		per[4] = per[4]+1
	elif(i==7):
		per[-1] = per[-1]+1
l = sum(per)
for j in range(6):
	per[j] = round(100*per[j]/l,1)

print(per)
-- EXECUTION TIME:
1.12606
-- TEST CASE 1:
---- input:
[2,2,2,5,5,5,6,6,6,6,7,7,7,7,7,7]
---- correct output:
[18.8 0. 0. 18.8 25. 37.5]
---- user output:
[18.8  0.   0.  18.8 25.  37.5]
-- TEST CASE 2:
---- input:
[2,3,3,4,4,4,4,5,5,5,5,5,6,6,6,6,6,7,7,7,7,7,7,7,7]
---- correct output:
[ 4. 8. 16. 20. 20. 32.]
---- user output:
[ 4.  8. 16. 20. 20. 32.]
-- TEST CASE 3:
---- input:
[2,2,3,4,4,4,5,6,6,7,7,7,7]
---- correct output:
[15.4 7.7 23.1 7.7 15.4 30.8]
---- user output:
[15.4  7.7 23.1  7.7 15.4 30.8]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
